--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,7 +2,8 @@
   background-color: rgb(139, 60, 60);
   display: flex;
   bottom: 0;
-  position: absolute;
+  left: 0;
+  position: fixed;
   justify-content: space-around;
   width: 100%;
   height: 25px;
