--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -1,5 +1,7 @@
-.image {
-  border: 1px solid #ccc;
+.frame {
+  display: flex;
+  margin-top: 100px;
+  justify-content: space-around;
 }
 
 .image:hover {
@@ -21,7 +23,8 @@
 }
 
 .container {
-  padding: 0 6px;
+  
+  padding: 0 0 0 0;
   float: left;
   width: 24.99999%;
 }
@@ -35,7 +38,18 @@
 
 @media only screen and (max-width: 500px) {
   .container {
-      width: 100%;
+    background-color: rgb(139, 60, 60); 
+    padding: 0 0 0 0;
+    width: 100%;
+    margin-bottom: 20px;
+    border: 3px solid rgb(139, 60, 60);
+  }
+
+  .frame {
+    width: 100%;
+    flex-direction: column;
+    background-color: white;
+    margin-top: 50px;
   }
 }
 
