--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -4,9 +4,7 @@
   justify-content: space-around;
 }
 
-.image:hover {
-  border: 1px solid #777;
-}
+
 
 .image img {
   width: 100%;
@@ -23,16 +21,30 @@
 }
 
 .container {
-  
   padding: 0 0 0 0;
   float: left;
   width: 24.99999%;
+  box-shadow: 0 2px white;
+  -webkit-transition: box-shadow 0.3s ease-in-out;
+  transition: box-shadow 0.3s ease-in-out;
 }
+
+.container:hover {
+  box-shadow: 10px 10px 5px rgb(139, 60, 60)
+}
+
 
 @media only screen and (max-width: 700px) {
   .container {
       width: 49.99999%;
       margin: 6px 0;
+      box-shadow: 0 2px white;
+      -webkit-transition: box-shadow 0.3s ease-in-out;
+      transition: box-shadow 0.3s ease-in-out;
+  }
+
+  .container:hover {
+    box-shadow: 10px 10px rgb(139, 60, 60)
   }
 }
 
