--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,7 +1,8 @@
 .about {
+  display: flex;
   text-align: center;
   margin: 100px 100px;
-  font-size: 2rem;
+  font-size: 1rem;
 }
 
 .about-link {
