--- a/src/components/Sidedrawer.css
+++ b/src/components/Sidedrawer.css
@@ -25,6 +25,7 @@
 
 .side-drawer a {
   font-size: 1.2rem;
+  color: black;
 }
 
 .side-drawer li {
@@ -33,6 +34,7 @@
 
 .side-drawer-link {
   color: black !important;
+  cursor: pointer;
 }
 
 .side-drawer a:hover,
