--- a/src/components/Backdrop.css
+++ b/src/components/Backdrop.css
@@ -4,6 +4,7 @@
   height: 100%;
   top: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.3);
+  background:rgb(32, 19, 19);
+  opacity: 0.6;
   z-index: 100;
 }
