--- a/src/components/ContactForm.module.css
+++ b/src/components/ContactForm.module.css
@@ -1,28 +1,39 @@
 .Contact_form {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    margin: auto;
-    padding: 0 50px;
-  }
-  
-  .Contact_email {
-   height: 30px;
-   margin-bottom: 20px;
-  }
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  width: 100%;
+  height: 60vh;
+  margin: auto;
+  padding: 0 50px;
+  font-size: 1.5rem;
+}
+
+.Contact_label {
+  color:  rgb(139, 60, 60);
+}
+
+.Contact_email {
+ width: 90%;
+ margin-bottom: 20px;
+ border-top: none;
+ border-right: none;
+ border-left: none;
+ }
 
 .Contact_msg {
-   height: 80px;
+ resize: none;
+ width: 90%;
 }
 
 .Button {
-    background-color: transparent;
-    border: none;
-    color: black;
-    outline: none;
-    cursor: pointer;
-    font: inherit;
-    padding: 10px;
-    margin: 10px;
-    font-weight: bold;
+  background-color: transparent;
+  border: none;
+  color:rgb(139, 60, 60);
+  outline: none;
+  cursor: pointer;
+  font: inherit;
+  padding: 10px;
+  margin: 10px;
+  font-weight: bold;
 }
