--- a/src/components/Sidedrawer.css
+++ b/src/components/Sidedrawer.css
@@ -1,6 +1,6 @@
 .side-drawer {
   height: 100%;
-  background-color: white;
+  background-color:rgb(139, 60, 60);
   box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.5);
   position: fixed;
   top: 0;
