--- a/src/components/Toolbar.css
+++ b/src/components/Toolbar.css
@@ -1,3 +1,13 @@
+.Contact_li {
+  color: white;
+  cursor: pointer;
+  padding-bottom: 3px;
+}
+
+.Contact_li:hover {
+  color: black;
+}
+
 .toolbar {
   position: fixed;
   top: 0;
@@ -8,11 +18,14 @@
 }
 
 .toolbar-logo {
-  margin-left: 0.5rem;
+  margin-left: 0.6rem;
+  margin-right: 0.5rem;
+  padding-bottom: 7px;
 }
 
 .toolbar-nav {
   display: flex;
+  flex-direction: row;
   height: 100%;
   align-items: center;
   padding: 0 1rem;
