--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Texturina', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -23,7 +21,9 @@ a {
   text-decoration: none;
 }
 
-
+button {
+  cursor: pointer;
+}
 
 li {
   list-style: none;
